--- a/style.css
+++ b/style.css
@@ -7,36 +7,61 @@ p{
 em{ 
   color:#ff0000;
 }
-#banner{
-    width:100%
+#banner{width:100%
   }
   
 h1{
     text-align:center;
   }
+
 .itens{
   font-style: italic;
 }
 .beneficios{
-  background: #ffffff;
+  background: #fffffff:
   padding:20px
 }
 
 h2{
   text-align:center;
-
 }
 ul{
-  display: inline-block
-  width:20%
-  margin-right: 15%
+  display: inline-block;
+  widt:20%
+  margin-right:15%;
   vertical-align:top;
 }
 .imagembeneficios{
-  width;50%;
-}  
-header{
-  text-align:center;
-  background-color: #fff;
-  padding: 20px;
+  width:50%;
 }
+header{
+   text-align:center;
+   background-color: #fff;
+   padding: 20px;
+}
+header ul li{
+  display: inline-block;
+  text-decoration: none;
+  padding: 10px;
+  font-size: 20px;
+}
+header ul{
+  width:100%
+}
+header ul li a{
+  color: #000;
+  text-decoration:none;
+}
+.produtos{
+  width: 940px;
+  maring: 0 auto;
+}
+.produtps li{
+  display:inline-block;
+  text-align: center;
+  width: 30%;
+}
+.produtos h2{
+ font-size: 30px;
+  font-weight: bold;
+} 
